force-app/main/default/objects/Negotiation_Checklist__mdt/Negotiation_Checklist__mdt.object-meta.xml
<CustomObject>
    <label>Negotiation Checklist</label>
    <pluralLabel>Negotiation Checklists</pluralLabel>
</CustomObject>