force-app/main/default/objects/Negotiation_Checklist__mdt/fields/Additional_Value__c.field-meta.xml
<CustomField>
    <fullName>Additional_Value__c</fullName>
    <label>Additional Value</label>
    <type>TextArea</type>
</CustomField>