force-app/main/default/objects/Negotiation_Checklist__mdt/fields/Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disclaimer</label>
    <type>Checkbox</type>
</CustomField>