force-app/main/default/objects/Negotiation_Checklist__mdt/fields/Footer_Label__c.field-meta.xml
<CustomField>
    <fullName>Footer_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Footer Label</label>
    <type>Checkbox</type>
</CustomField>