force-app/main/default/objects/Negotiation_Checklist__mdt/fields/IsHeading__c.field-meta.xml
<CustomField>
    <fullName>IsHeading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHeading</label>
    <type>Checkbox</type>
</CustomField>