force-app/main/default/objects/Negotiation_Checklist__mdt/fields/IsMainHeading__c.field-meta.xml
<CustomField>
    <fullName>IsMainHeading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMainHeading</label>
    <type>Checkbox</type>
</CustomField>