force-app/main/default/objects/Negotiation_Checklist__mdt/fields/IsSubLabel__c.field-meta.xml
<CustomField>
    <fullName>IsSubLabel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSubLabel</label>
    <type>Checkbox</type>
</CustomField>