force-app/main/default/objects/Negotiation_Checklist__mdt/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location</label>
    <type>Checkbox</type>
</CustomField>