force-app/main/default/objects/Negotiation_Checklist__mdt/fields/Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Sequence_No__c</fullName>
    <label>Sequence No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>