force-app/main/default/objects/Negotiation_Checklist__mdt/fields/Sub_With_single_column__c.field-meta.xml
<CustomField>
    <fullName>Sub_With_single_column__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub With single column</label>
    <type>Checkbox</type>
</CustomField>