force-app/main/default/objects/Negotiation_Checklist__mdt/fields/Text_Label__c.field-meta.xml
<CustomField>
    <fullName>Text_Label__c</fullName>
    <label>Text Label</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>